<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_cab_logo"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/welcome_back"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_email"
            android:background="@drawable/edittext_bg"
            android:padding="12dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_password"
            android:background="@drawable/edittext_bg"
            android:padding="12dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/login"
            android:backgroundTint="@color/primary"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnSignup"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/signup"
            android:backgroundTint="@color/accent"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</ScrollView>

